# foundry-mcp-reservation-system

./: .gitignore  README.md  pyproject.toml
booking-system/: pyproject.toml
recommendation-system/: pyproject.toml
recommendation-system/dataset/: Readme.md
recommendation-system/ml/: README.md  forecasting-timeseries-ml.ipynb  sample_request.json
recommendation-system/ml/data/validation-mltable-folder/: MLTable
