[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundry-mcp-reservation-system"
version = "0.1.0"
description = "A reservation system with booking and recommendation capabilities"
requires-python = ">=3.10"
dependencies = [
    "azure-ai-ml",
    "azure-identity",
    "pandas>=2.0.0",
    "numpy>=1.26.0",  # Python 3.12+ requires numpy 1.26+
    "pyarrow>=17.0.0",  # Python 3.13 requires pyarrow 17+ for pre-built wheels
    "mlflow",
    "torch",
    "ipykernel",
    # sklearn for loading the forecasting model directly
    "scikit-learn>=1.5.0",
    "joblib",
]

[tool.setuptools]
py-modules = []
